<resources>
    <string name="app_name">LoginApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_there">Hello there!</string>
    <string name="user">user</string>
    <string name="log_out">Log Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_">Password</string>
</resources>